--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,15 +1,14 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
+<head>
+    <meta charset="UTF-8">
+    <title>메인</title>
+</head>
 <body>
-<div class="container">
-    <div>
-        <h1>Hello Spring</h1>
-        <p>회원 기능</p>
-        <p>
-            <a href="/members/new">회원 가입</a>
-            <a href="/members/login">로그인</a>
-        </p>
-    </div>
-</div> <!-- /container -->
+<h1>메인 페이지</h1>
+<hr>
+<a sec:authorize="isAnonymous()" th:href="@{/members/login}">로그인</a>
+<a sec:authorize="isAuthenticated()" th:href="@{/logout}">로그아웃</a>
+<a sec:authorize="isAnonymous()" th:href="@{/members/new}">회원가입</a>
 </body>
 </html>
