--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,7 +7,7 @@
 <body>
 <h1>메인 페이지</h1>
 <hr>
-<a sec:authorize="isAnonymous()" th:href="@{/members/login}">로그인</a>
-<a sec:authorize="isAnonymous()" th:href="@{/members/new}">회원가입</a>
+<a  th:href="@{/members/login}">로그인</a> <--sec:authorize="isAnonymous()"--!>
+<a  th:href="@{/members/new}">회원가입</a>
 </body>
 </html>
